--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: #06131c;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.hover {
+  margin-bottom: 20px;
+  color: lightslategray;
+  margin-top: -15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-app {
   display: flex;
   flex-direction: column;
+  justify-content: start;
+  width: 800px;
+  min-height: 600px;
+  text-align: center;
+  margin: 128px auto;
+  border-radius: 20px;
+  padding-bottom: 32px;
+
+  background: #0c1b27;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+h1 {
+  margin: 32px 0;
+  color: #fff;
+  font-size: 24px;
+}
+
+.complete {
+  text-decoration: line-through;
+  opacity: 0.4;
+}
+
+.todo-form {
+  margin-bottom: 32px;
+}
+
+.todo-input {
+  padding: 14px 32px 14px 16px;
+  border-radius: 5px;
+  border: 2px solid #1b2d3c ;
+  outline: none;
+  width: 420px;
+  background: transparent;
+  color: #fff;
+}
+
+.todo-input::placeholder {
+  color: #acacac;
+}
+
+.todo-button {
+  padding: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  background: #1b2d3c;
+  color: #fff;
+  text-transform: capitalize;
+  margin-left: 35px;
+}
+
+.todo-input.edit {
+  border: 2px solid #202d56;
+}
+
+.todo-button.edit {
+  background: #202d56;
+  padding: 16px 22px;
+}
+
+.todo-container {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+
+.todo-row {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 4px auto;
+  color: #fff;
+  background: #42252c;
+
+  padding: 16px;
+  border-radius: 5px;
+  width: 90%;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+/* .todo-row:nth-child(4n + 1) {
+  background: linear-gradient(
+    90deg,
+    rgba(93, 12, 255, 1) 0%,
+    rgba(155, 0, 250, 1) 100%
+  );
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-row:nth-child(4n + 2) {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 12, 241, 1) 0%,
+    rgba(250, 0, 135, 1) 100%
+  );
+}
+
+.todo-row:nth-child(4n + 3) {
+  background: linear-gradient(
+    90deg,
+    rgba(20, 159, 255, 1) 0%,
+    rgba(17, 122, 255, 1) 100%
+  );
+} */
+
+.icons {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.delete-icon {
+  margin-right: 10px;
+  color: #864a5a;
+}
+
+.edit-icon {
+  margin-right: 10px;
+  color: #555b6c;
+}
+
+.clear-icon {
+  margin-right: 10px;
+  color: #6041a8;
+}
+
+.clear-button{
+  padding: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  background: #864a5a;
+  color: #fff;
+  text-transform: capitalize;
+  margin-left: 35px;
 }
